--- a/templates/index.html
+++ b/templates/index.html
@@ -4,22 +4,48 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Video Transcript</title>
-  <link rel="stylesheet" href="/static/index.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 <body>
-  <div class="container">
+  <div>
+    <br>
+  </div>
+  <div class="container-fluid bg-primary text-white p-4 text-center">
+
     <h1>Video Transcript</h1>
-    <form action="/" method="post" enctype="multipart/form-data">
-      <input type="file" name="file" id="file" accept="video/*" required>
-      <button type="submit">Upload and Transcribe</button>
-    </form>
+
+<body class="bg-dark">
+  
+</body>
+<form action="/" method="post" enctype="multipart/form-data">
+  <div class="d-flex justify-content-center gap-2 mt-3">
+    <input
+      type="file"
+      name="file"
+      accept="video/*"
+      class="form-control w-50"
+      required
+    >
+    <button type="submit" class="btn btn-success">
+      Transcribe
+    </button>
+  </div>
+</form>
+
+  </div>
+
+  <br>
 
     {% if transcript %}
-    <div class="transcript">
-      <h3>Transcript:</h3>
+      <h3 style="color: white; text-align: center;">Transcript:</h3>
+      <div class="container rounded bg-primary text-white p-4 text-center">
       <p>{{ transcript }}</p>
-    </div>
+    
     {% endif %}
-  </div>
+    </div>
+
+
+    <br><br>
+  
 </body>
 </html>
