Make a hashmap of word indexes in main.py and passed to jinja.Add a feature that lets the user to type in a word and it will highlight the words if it exists in the transcript, this was done by using onlick buton that calls a js function.

--- a/static/index.css
+++ b/static/index.css
@@ -13,3 +13,8 @@
   .word:active {
     background-color: rgba(255, 255, 255, 0.4);
   }
+
+  .audio-player {
+    width: 450px; /* adjust to whatever fits your layout */
+    height: 35px;  /* optional, controls player height slightly */
+}
